@@ -1,3 +1,8 @@
+2011-02-17 Javier Lanz <javier.lanz@artica.es>
+	* godmode/gis_maps/index.php: Show only user's GIS maps
+	
+	Fix: #3183432
+
 2011-02-17  Ramon Novoa  <rnovoa@artica.es>
 
 	* include/functions.php: Merged from trunk. Hide custom SQL reports
